# ltr-wrapper

./: .gitignore  CMakeLists.txt
src/: ltr212_wrapper.cpp  ltr212_wrapper.h  ltr_exception.cpp  ltr_exception.h
